--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,7 @@
 
   <body>
   <%= render "shared/navbar" %>
+  <%= render "shared/flashes" %>
     <%= yield %>
-
-       <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
-
   </body>
 </html>
