adds new user fields to new and edit forms and permissions to application controller

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,6 +6,18 @@
     <%= f.error_notification %>
 
     <div class="form-inputs">
+      <%= f.input :first_name,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "first-name" }%>
+      <%= f.input :last_name,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "last-name" }%>
+      <%= f.input :postcode,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "postcode" }%>
       <%= f.input :email,
                   required: true,
                   autofocus: true,
