--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Tools#index</h1>
-<p>Find me in app/views/tools/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+      <h1>All tools</h1>
+      <ul class="list-group mb-3">
+        <% @tools.each do |tool| %>
+          <li class="list-group-item">
+            <%= link_to tool.name, tool_path(tool) %>
+          </li>
+        <% end %>
+      </ul>
+      <%= link_to "Add a new Tool", new_tool_path, class: 'btn btn-primary' %>
+    </div>
+  </div>
+</div>
