--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,11 +1,17 @@
 <div class="card-category"
 >
- <h1><%# @tool.description %></h1>
+ <h1><% @tool.name %></h1>
 </div>
 
-
 <div class="container mb-5">
-  <div class="d-flex justify-content-between my-4">
-      <%# link_to " add a review", new_tool_booking_review_path(@booking), class: "btn btn-primary"%>
-      <%# link_to "delete this review", _path(@booking), class: "btn btn-cancel", data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this review?" } %>
+  <div class="d-flex justify-content-between my-6">
+  <% @bookings.each do |booking| %>
+    <small class="flex-grow-1"><%= booking.start_date %></small>
+    <small class="flex-grow-1"><%= booking.end_date %></small>
+    <small class="flex-grow-1"><%= booking.date %></small>
+    <small class="flex-grow-1"><%= booking.status %></small>
+    <small ><%= link_to "delete", bookings_path(booking), data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to remove your booking"}, class: 'text-danger' %>
+    </small>
+ <% end %>
+</div>
   </div>
