--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -9,7 +9,7 @@
               <tbody>
                 <tr>
                 <th scope="row">Tool type</th>
-                <td><%= tool.type %></td>
+                <td><%= tool.name %></td>
                 </tr>
                 <tr>
                 <th scope="row">Price</th>
