tool update tool.rb

--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -25,7 +25,8 @@
                 </tr>
                 <tr>
                 <th scope="row">Book</th>
-                <td><%= link_to "Book", book_path, class: 'btn btn-primary' %></td>
+                <!--<td><%= link_to "Book", booking_path, class: 'btn btn-primary' %></td>
+                -->
                 </tr>
               </tbody>
             </table>
