--- a/app/views/tools/new.html.erb
+++ b/app/views/tools/new.html.erb
@@ -3,7 +3,7 @@
     <div class="col-xs-12 col-sm-10 col-sm-offset-1">
       <h1>Create a new tool</h1>
       <%= simple_form_for @tool do |f| %>
-        <%= f.input :type, collection: Tool::TYPES %>
+        <%= f.input :name, collection: Tool::NAMES %>
         <%= f.input :price %>
         <%= f.input :postcode %>
         <%= f.input :description %>
