create bookings form and show page

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -17,6 +17,13 @@ a {
   text-align: center;
 }
 
+.tool-img {
+  width: 200px;
+  height: 200px;
+  border-radius: 5%;
+  border-color: aquamarine;
+  border-style:ridge;
+}
 
 .tool-name{
   position: center;
