--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -1,47 +1,46 @@
 
 <div class="main-card">
   <div class="tool-name">
-    <h1><%= @tool.type %></h1>
+    <h1><%= @tool.name %></h1>
   </div>
 
 <div class="tool-details container mb-5">
   <div class="justify-content-between my-4">
        <h2> Tool details</h2>
 
-<p> This <%= @tool.type %> is located at <%= @tool.postcode %> </p>
-<p> Try to put the map here - on the right - add a flexbox</p>
-<p> This tool costs <%= @tool.price%> per day
+<p> This <%= @tool.name%> is located at <%= @tool.postcode %> </p>
+<p> AMAZING MAP HERE </p>
+<p> This tool costs £<%= @tool.price%> per day
 <p> Tool description: <%= @tool.description %></p>
-<%# <p> See the photos: <%= image_tag tool.image_url, alt: @tool.name %> %>
-<p>
-<br>
+<p> See the photos: </p>
+<p><img src=<%=@tool.image_url%> class="tool-img"> </p>
+<br><br>
+   <%= render "bookings/booking_form" %>
+<br><br>
 <h3> Reviews </h3>
-<p> See what our users said about this <%= @tool.type %> </p>
+<p> See what our users said about this <%= @tool.name %> </p>
 
   <%# <% @tool.reviews.each do |review| %>
-    <%# <li><%= review.rating</li> %>
-    <%# <li><%= review.comment</li> %>
-  <%# <% end %>
-
-      <%# <%= link_to "book this tool", tool_path(@tool), class: "btn btn-primary", data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to book this tool?" } %>
+  <%# <li><%= review.rating </li> %>
+  <%# <li> <%= review.comment </li> %>
+  <%# <% end%>
 
   </div>
 
-  <div class="reviews">
-      <h3>Reviews</h3>
+  <%# <div class="reviews"> %>
       <%# <% if @tools.reviews.empty? %>
         <%# <small><em class="text-muted"> No reviews yet </em></small> %>
-      <%# <% end %> %>
-      <%# <% @tools.reviews.each do |review| %> %>
+      <%# <% end %>
+      <%# <% @tools.reviews.each do |review| %>
         <%# <div> %>
-          <%# <% review.rating.times do %> %>
+          <%# <% review.rating.times do %>
             <%# <i class="fas fa-star star-yellow"></i> %>
-          <%# <% end %> %>
-          <%# <small><em class="text-muted"><%= distance_of_time_in_words_to_now(review.created_at) %> ago</em></small> %>
-          <%# <p class="mb-0"><%= review.comment %></p> %> %>
+          <%# <% end %>
+          <%# <small><em class="text-muted"><%= distance_of_time_in_words_to_now(review.created_at) ago</em></small> %>
+          <%# <p class="mb-0"><%= review.comment %></p>
         <%# </div> %>
         <%# <hr> %>
-      <%# <% end %> %>
+      <%# <% end %>
       </div>
           <p class="btn btn-success btn-lg"> <%= link_to "<button>Back to Tools </button>".html_safe, tools_path %> </p>
     </div>
