show page basic booking

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,1 +1,8 @@
-<h1> Your booking </h1>
+<div class="main-card">
+<h1> Your toolUp bookings: </h1>
+  <div class="tool-name">
+
+    <h1> You made a booking </h1>
+    <h2> Have fun! </h2>
+  </div>
+ </div>
