adds banner to home page

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -7,7 +7,7 @@
 body {
   margin: auto;
   font-family: 'Open Sans', sans-serif;
-  background-color: rgb(222, 233, 224);
+  // background-color: rgb(222, 233, 224);
 }
 
 a {
