--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,10 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
-$blue: #0D6EFD;
-$yellow: #FFC65A;
+$red: #DF2A29;
+$blue: #1D5A91;
+$yellow: #FCE803;
 $orange: #E67E22;
 $green: #1EDD88;
-$gray: #0E0000;
+$gray: #17181A;
 $light-gray: #F4F4F4;
