add banner img to assets folder and update sass color variables

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,10 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
-$blue: #0D6EFD;
-$yellow: #FFC65A;
-$orange: #E67E22;
-$green: #1EDD88;
-$gray: #0E0000;
-$light-gray: #F4F4F4;
+$red: #DF2A29;
+$blue: #3377ab;
+$yellow: #FCE803;
+$orange: #CD6B2E;
+$green: #3ba676;
+$gray: #17181A;
+$light-gray: #d5dae4;
