tweak colors, add fonts and banner css to home page

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,9 +2,9 @@
 
 // For example:
 $red: #DF2A29;
-$blue: #3377ab;
+$blue: #1D5A91;
 $yellow: #FCE803;
-$orange: #CD6B2E;
+$orange: #E67E22;
 $green: #3ba676;
 $gray: #17181A;
 $light-gray: #d5dae4;
