--- a/app/views/tools/new.html.erb
+++ b/app/views/tools/new.html.erb
@@ -1,13 +1,14 @@
 <div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-      <h1>Create a new tool</h1>
+  <div class="row mt-4 d-flex justify-content-center">
+    <div class="col-sm-10 col-md-6">
+      <h1>Lend a tool</h1>
+      <p>Add the details below of the tool that you'd like to lend to others</p>
       <%= simple_form_for @tool do |f| %>
-        <%= f.input :name, collection: Tool::NAMES %>
-        <%= f.input :price %>
-        <%= f.input :postcode %>
-        <%= f.input :description %>
-        <%= f.submit class: 'btn btn-primary' %>
+        <%= f.input :name, required: true, prompt: 'choose a tool...', collection: Tool::NAMES %>
+        <%= f.input :price, required: true, hint: 'enter the price per day', placeholder: 'eg £10' %>
+        <%= f.input :postcode, required: true, hint: 'Enter your postcode', placeholder: 'eg NW6 7QA' %>
+        <%= f.input :description, required: true, hint: 'describe the tool you are lending', placeholder: 'eg electric lawnmower' %>
+        <%= f.button :submit, "Add your tool",  class: 'btn btn-primary' %>
       <% end %>
     </div>
   </div>
