--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -18,11 +18,11 @@ a {
 }
 
 .tool-img {
-  width: 200px;
-  height: 200px;
-  border-radius: 5%;
-  border-color: aquamarine;
-  border-style:ridge;
+  // width: 200px;
+  // height: 200px;
+  // border-radius: 5%;
+  // border-color: aquamarine;
+  // border-style:ridge;
 }
 
 .tool-name{
