updates bootstrap color variables

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -7,4 +7,6 @@ $yellow: #FCE803;
 $orange: #E67E22;
 $green: #3ba676;
 $gray: #17181A;
+$med-gray: #3a3a3a;
 $light-gray: #d5dae4;
+$white: #ffffff;
