--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,14 +1,14 @@
 .main-card {
-  width: 800px;
+  // width: 800px;
   display: block;
-  margin: 100px;
+  // margin: 100px;
 }
 
-body {
-  margin: auto;
-  font-family: 'Open Sans', sans-serif;
-  background-color: rgb(222, 233, 224);
-}
+// body {
+//   margin: auto;
+//   font-family: 'Open Sans', sans-serif;
+//   background-color: rgb(222, 233, 224);
+// }
 
 a {
   text-decoration: none;
@@ -41,7 +41,7 @@ a {
   text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
   text-align: center;
   font-size: 27px;
-  background-color: rgb(209, 231, 213);
+  // background-color: rgb(209, 231, 213);
 }
 
 .tool-details{
@@ -56,5 +56,5 @@ a {
   border-radius: 5px;
   color: rgb(23, 20, 20);
   text-align: justify;
-  background-color: rgb(209, 231, 213);
+  // background-color: rgb(209, 231, 213);
 }
