--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -19,35 +19,35 @@ function getSort() {
 
 </script>
 
-<div class="container justify-content-center py-3 mt-4">
+<div class="container-lg py-3 mt-4">
 <h2 class="h3">Tools available nearby</h2>
 <div class="input-group rounded">
   <input type="search" id="search_text" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" value=<%= params[:search]%> >
   <span class="input-group-text border-0" id="search-addon">
-    <i class="fas fa-search" onclick='getSearch()'></i>
+    <i class="fas fa-search pe-auto" onclick='getSearch()'></i>
   </span>
 </div>
-<div class="card-body py-1 rounded " >
+<div class="card-body py-1 rounded">
   <!-- AUTO COMPLETE DROPDOWN -->
-  <select id="sort" class="selectpicker form-control border-0 mb-1 px-1 py-1 rounded shadow" onchange='getSort()'>
-      <option value="">---Sort by---</option>
+  <select id="sort" class="selectpicker form-control form-select form-select-sm border mt-1 mb-1 px-1 py-1 rounded" onchange='getSort()'>
+      <option selected>Sort by</option>
       <option value="Distance">Distance (nearest first)</option>
-      <option value="order=asc">Price (lowerest first)</option>
+      <option value="order=asc">Price (lowest first)</option>
       <option value="order=desc">Price (highest first)</option>
       <option value="Rating_high">Rating (highest first)</option>
-      <option value="Rating_low">Rating (lowerest first)</option>
+      <option value="Rating_low">Rating (lowest first)</option>
   </select>
 </div>
-    <div class="container-md-9 row mt-2 card-group">
+    <div class="row mt-2 card-group">
         <%# <div class="col rounded p-3"> %>
         <% @tools.each do |tool| %>
-            <div class="col-sm-6 col-md-4 col-lg-3 rounded-3 mb-3">
-              <div class="card shadow-sm mb-3 h-100 border-0">
+            <div class="col-sm-6 col-md-4 col-lg-3 mb-3">
+              <div class="card rounded-3 shadow mb-3 h-100 border-0">
                 <img src="<%=tool.image_url%>" class="card-img-top tool-img" alt="picture of a <%=tool.name %>">
-                  <div class="card-body d-flex align-items-start flex-column" >
+                  <div class="card-body py-3 d-flex align-items-start flex-column">
                     <h2 class="card-title fs-3"><%= tool.name %></h2>
                     <p class="card-text">Price: £<%= tool.price %> / day</p>
-                    <p class="card-text mb-auto"><%= tool.description %></p>
+                    <p class="card-text tool-description mb-auto"><%= tool.description %></p>
                     <h3 class="card-title text-info fs-4">
                       <% for i in 1..rand(1...5) do %>
                       &#9733;
