--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,6 +1,6 @@
 .main-card {
   // width: 800px;
-  display: block;
+  // display: block;
   // margin: 100px;
 }
 
@@ -11,13 +11,18 @@
 // }
 
 a {
-  text-decoration: none;
+  // text-decoration: none;
 }
 .text-center {
-  text-align: center;
+  // text-align: center;
 }
 
-.tool-img {
+.tool-show-img {
+  // display: block;
+  // width: 100%;
+  // max-width: 500px;
+  // object-fit: contain;
+  // margin: 0;
   // width: 200px;
   // height: 200px;
   // border-radius: 5%;
@@ -26,35 +31,35 @@ a {
 }
 
 .tool-name{
-  position: center;
-  background-size: cover;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: auto;
-  height: 100px;
-  margin-left: 50px;
-  margin-right: 50px;
-  margin-top: 80px;
-  margin-bottom: 20px;
-  border-radius: 5px;
-  color: rgb(15, 14, 14);
-  text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
-  text-align: center;
-  font-size: 27px;
+  // position: center;
+  // background-size: cover;
+  // box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  // transition: 0.3s;
+  // width: auto;
+  // height: 100px;
+  // margin-left: 50px;
+  // margin-right: 50px;
+  // margin-top: 80px;
+  // margin-bottom: 20px;
+  // border-radius: 5px;
+  // color: rgb(15, 14, 14);
+  // text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+  // text-align: center;
+  // font-size: 27px;
   // background-color: rgb(209, 231, 213);
 }
 
 .tool-details{
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: auto;
-  height: auto;
-  margin-left: 50px;
-  margin-right: 50px;
-  margin-top: none;
-  margin-bottom: 20px;
-  border-radius: 5px;
-  color: rgb(23, 20, 20);
-  text-align: justify;
+  // box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  // transition: 0.3s;
+  // width: auto;
+  // height: auto;
+  // margin-left: 50px;
+  // margin-right: 50px;
+  // margin-top: none;
+  // margin-bottom: 20px;
+  // border-radius: 5px;
+  // color: rgb(23, 20, 20);
+  // text-align: justify;
   // background-color: rgb(209, 231, 213);
 }
