--- a/app/views/bookings/_booking_form.html.erb
+++ b/app/views/bookings/_booking_form.html.erb
@@ -1,6 +1,7 @@
-<h1><strong>Book this tool</strong></h1>
   <%= simple_form_for [@tool, @user, @booking] do |f| %>
-    <div class="book-form">
+    <div class="book-form shadow px-4 py-4 border rounded">
+    <h2 class="fs-3 fw-3">Book this <%= @tool.name %></h2>
+      <p>This tool costs <strong>£<%= @tool.price %> per day</strong></p>
       <div class="small-form-box">
         <div class="booking-input-box my-3 small-form-input">
           <%= f.input :start_date, as: :date, html5: true %>
@@ -9,7 +10,7 @@
           <%= f.input :end_date, as: :date, html5: true %>
         </div>
       <div id="submit-btn">
-        <%= f.submit "Submit booking", class: "btn btn-black row-form-btn" %>
+        <%= f.submit "Submit booking", class: "btn btn-primary w-100 mt-2" %>
       </div>
     </div>
   <% end %>
