updates header on show page

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,3 +1,9 @@
+.tool-body {
+  background-color: $light-yellow;
+}
+.book-form {
+  background-color: $white;
+}
 .main-card {
   // width: 800px;
   // display: block;
