--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -5,6 +5,7 @@ $red: #DF2A29;
 $blue: #1D5A91;
 $yellow: #FCE803;
 $light-yellow: #fffeee;
+$dark-yellow: #dbcb23;
 $orange: #E67E22;
 $green: #3ba676;
 $gray: #17181A;
