--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -1,7 +1,7 @@
 <div class="tool-body">
-  <div class="container-sm mt-4">
+  <div class="container-sm">
     <div class="row justify-content-center">
-      <div class="col col-md-6 my-5">
+      <div class="col col-md-6 py-5">
         <div class="header">
           <h1 class="text-center"><%= @tool.name %></h1>
         </div>
