adds footer and basic styling

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -3,6 +3,7 @@
 // For example:
 $red: #DF2A29;
 $blue: #1D5A91;
+$dark-blue: #154e80;
 $yellow: #FCE803;
 $light-yellow: #fffeee;
 $dark-yellow: #dbcb23;
