--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,5 +1,5 @@
 .tool-body {
-  background-color: $light-yellow;
+  // background-color: $light-yellow;
 }
 .book-form {
   background-color: $white;
