updates booking confirm show page and adds logo to navbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -7,10 +7,10 @@
   flex-grow: 0;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
-}
-
 .nav-link {
   color: $gray;
+}
+
+.toolup-logo {
+  height: 50px;
 }
