--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -13,7 +13,7 @@
         </div>
         <div class="tool-location mt-3">
           <h3>Location</h3>
-          <p> This <%= @tool.name%> is located at <%= @tool.postcode %> </p>
+          <p> This <%= @tool.name%> is located at <%= @tool.address %> </p>
           <p>MAP GOES HERE</p>
         </div>
         <div class="tool-reviews mt-3">
