--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -14,7 +14,11 @@
         <div class="tool-location mt-3">
           <h3>Location</h3>
           <p> This <%= @tool.name%> is located at <%= @tool.address %> </p>
-          <p>MAP GOES HERE</p>
+          <div style="width: 100%; height: 600px;"
+              data-controller="map"
+              data-map-markers-value="<%= @markers.to_json %>"
+              data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+          </div>
         </div>
         <div class="tool-reviews mt-3">
           <h3 class="mt-3">Reviews</h3>
